# book-stuff-api

./: README.md  pyproject.toml
.github/workflows/: fmt.yml  tests.yml
src/: manage.py
src/accounts/: serializers.py  urls.py  views.py
src/accounts/tests/: test_user_api.py
src/book_stuff/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
src/book_stuff/tests/: test_deny_all.py  test_jwt_views.py  test_openapi.py
src/booking/: admin.py  apps.py  permissions.py  urls.py
src/booking/constants/: __init__.py  invitation.py
src/booking/filter/: __init__.py  invitation.py  place.py  reservation.py  resource.py
src/booking/migrations/: 0001_initial.py  0002_place_invitation.py  0002_remove_place_slug.py  0003_reservation.py
src/booking/models/: __init__.py  base.py  invitation.py  place.py  querysets.py  reservation.py  resource.py
src/booking/serializers/: __init__.py  invitation.py  place.py  reservation.py  resource.py
src/booking/signals/: __init__.py  invitation.py
src/booking/tests/: test_api.py  test_invitation_api.py  test_invitation_signals.py  test_permissions_unit.py
src/booking/views/: __init__.py  invitation.py  place.py  reservation.py  resource.py
