[project]
name = "book-stuff-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-filter>=25.2",
    "django-guardian>=3.3.1",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "django-types>=0.24.0",
    "djangorestframework-stubs>=3.16.9",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ty.src]
include = [
    "src/",
]
